--- a/Dictionary.WebApi/appsettings.json
+++ b/Dictionary.WebApi/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "DefaultValues": {
+    "DefaultCleanupValue": 15,
+    "DefaultExpirationValue": 30
+  }
 }
