Implemented Item service cleanup function.

--- a/Dictionary.WebApi/Dictionary.WebApi.csproj
+++ b/Dictionary.WebApi/Dictionary.WebApi.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.1.28" />
     <PackageReference Include="dbup" Version="5.0.37" />
     <PackageReference Include="dbup-postgresql" Version="5.0.37" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
