--- a/Dictionary.WebApi/Dictionary.WebApi.csproj
+++ b/Dictionary.WebApi/Dictionary.WebApi.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -20,6 +20,7 @@
     <PackageReference Include="Dapper" Version="2.1.28" />
     <PackageReference Include="dbup" Version="5.0.37" />
     <PackageReference Include="dbup-postgresql" Version="5.0.37" />
+    <PackageReference Include="Npgsql" Version="8.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
