Added authorize functionality to swagger

--- a/Dictionary.WebApi/appsettings.json
+++ b/Dictionary.WebApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "Authentication": {
+    "ApiKey": "27FEF1DBF3364BAE862ACCEB2C873561"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
